# DADA_Project

./: .gitignore  README.md  main_attack.py  pyproject.toml
datasets/attack_families/: Alternating_languages_and_escape_characters_attack_variants.json  Augmenting_the_prompt_template_attack_variants.json  Changing_input_attack_format_attack_variants.json  Changing_output_format_common_attacks_attack_variants.json  Exploiting_friendliness_and_trust_attack_variants.json  Extracting_the_prompt_template_attack_variants.json  Fake_completion_prefilling_attack_variants.json  Hybrid_attack_variants.json  Ignoring_the_prompt_template_attack_variants.json  Prompted_persona_switches_attack_variants.json  Rephrasing_obfuscating_common_attacks_attack_variants.json
datasets/benchmark_data/: academic.json  banking.json  e-commerce.json  insurance.json
datasets/knowledge_base_cache/: academic.json  banking.json  e-commerce.json  insurance.json
profiles/eval_config/: slm_ensemble.json
profiles/model_config/: llama.json  mistral.json  qwen.json  vicuna.json
profiles/usecase_config/: academic.json  banking.json  e-commerce.json  insurance.json
results/test001/: final_results.json  summary.txt
utilities/: clean_database.py  db_sync.py  defence_utils.py  evaluation.py  generate_attack_variants.py  rag_utils.py  results_merger.py  unified_adapter.py  upload_attack.py  upload_business.py
utilities/eval/: ensemble.py  leakage_rules.py  slm_judge.py
